[package]
name = "enderv3_stock_uk"
version = "0.1.0"
authors = ["Ahmed Hefnawi <44701865+hefnawi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11.0", features = ["blocking"] }
ureq = "2.0.0"
kuchiki = "0.8.1"
